samples/_failures_safe/1761128898_6a5518_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb408d2a.c: In function ‘main’:
./samples/SAFE/__tmp_cb408d2a.c:162:12: error: missing terminating " character
  162 |     printf("Decomp
      |            ^~~~~~~
./samples/SAFE/__tmp_cb408d2a.c:162:5: error: expected expression at end of input
  162 |     printf("Decomp
      |     ^~~~~~
./samples/SAFE/__tmp_cb408d2a.c:162:5: error: expected declaration or statement at end of input
